Bug 130778 - fixing Txul regression from changing 'menuactive' attribute to :-moz-menuactive pseudoclass.  Get the menuactive state from the frame instead of the content node so that we don't have to call through xpconnect and js.  r=dbaron, sr=hyatt, a=asa.