layout/xul/base/src/nsMenuBarFrame.cpp
@@ -58,7 +58,6 @@
 #include "nsMenuPopupFrame.h"
 #include "nsGUIEvent.h"
 #include "nsUnicharUtils.h"
-#include "nsIDOMXULMenuBarElement.h"
 #ifdef XP_WIN
 #include "nsISound.h"
 #include "nsWidgetsCID.h"
@@ -234,18 +233,6 @@ nsMenuBarFrame::ToggleMenuActiveState()
       mCurrentMenu = firstFrame;
     }
   }
-
-  // Update the state on the menubar content node
-  nsCOMPtr<nsIDOMXULMenuBarElement> menubar = do_QueryInterface(mContent);
-  nsCOMPtr<nsIDOMElement> newActive;
-  if (mCurrentMenu) {
-    nsIFrame* frame = nsnull;
-    CallQueryInterface(mCurrentMenu, &frame);
-    nsCOMPtr<nsIContent> content;
-    frame->GetContent(getter_AddRefs(content));
-    newActive = do_QueryInterface(content);
-  }
-  menubar->SetActiveMenu(newActive);
 
   // Now send a CSS state change notification
   if (mCurrentMenu)
@@ -556,19 +543,6 @@ NS_IMETHODIMP nsMenuBarFrame::SetCurrentMenuItem(nsIMenuFrame* aMenuItem)
   }
 
   mCurrentMenu = aMenuItem;
-
-  // Update the menubar content node
-  nsCOMPtr<nsIDOMXULMenuBarElement> menubar = do_QueryInterface(mContent);
-  nsCOMPtr<nsIDOMElement> newActive;
-  if (mCurrentMenu) {
-    nsIFrame* frame = nsnull;
-    CallQueryInterface(mCurrentMenu, &frame);
-    nsCOMPtr<nsIContent> content;
-    frame->GetContent(getter_AddRefs(content));
-    newActive = do_QueryInterface(content);
-  }
-
-  menubar->SetActiveMenu(newActive);
 
   // Now send a CSS state change notification
   if (mCurrentMenu)
